[package]
name = "utodoist"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.0", features = ['derive'] }
colored = "3.0.0"
reqwest = { version = "0.12.14", features = ['blocking', 'json'] }
serde = { version = "1.0", features = ['derive'] }
serde_json = { version = "1.0" }
